AMPOFFLINE-699 adjust container height to avoid extra space when not needed

--- a/app/components/layout/App.css
+++ b/app/components/layout/App.css
@@ -1,5 +1,5 @@
 .wrap {
-  min-height:100%;
+  min-height:84%;
   background-color: #ffffff;
 }
 
